fixed spacing and the subsection headers

--- a/profile-website-react/src/pages/stylesheets/Home.css
+++ b/profile-website-react/src/pages/stylesheets/Home.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #bfa8ff;
+    background-color: #cdbdf9;
     font-size: 30px;
     text-align: center;
     display: flex;
@@ -14,6 +14,7 @@ h1{
     font-size: 70px;
 }
 h2{
+    
     font-size: 50px;
 }
 h3{
@@ -28,9 +29,9 @@ p{
     text-align: left;
     margin: 0;
 }
-.intro{
-    
-    background-color: yellow;
+
+#sectionHeader{
+    text-align: center;
 }
 #intro-content{
     display: flex;
@@ -46,9 +47,7 @@ p{
     max-width: 400px;
 }
 
-.skills{
-    background-color: red;
-}
+
 #skills-list{
     display: flex;
     flex-direction: row;
@@ -73,9 +72,7 @@ ul{
     text-align: center;
 }
 
-.education{
-    background-color: blue;
-}
+
 .school{
     width: 100%;
     display: flex;
