--- a/profile-website-react/src/styles.css
+++ b/profile-website-react/src/styles.css
@@ -7,13 +7,12 @@ body {
 }
 
 .container{
-    /* margin: 1rem; */
     text-align: center;
     margin: 50px;
 }
 
 .nav{
-    background-color: #342;
+    background-color: rgb(172, 116, 246);
     color: rgb(255, 255, 255);
     display: flex;
     position: fixed;
@@ -48,10 +47,10 @@ body {
 }
 
 .nav li.active{
-    background-color: #555;
+    background-color: #e8bbff;
 }
 
 .nav li:hover{
-    background-color: #987;
+    background-color: #de9cff;
 }
 
